# osu-rivals

./: Cargo.toml  README.md  shell.nix
src/: api_v2.rs  main.rs  rank.rs  ratatui_test.rs  v1.rs  v2.rs
