[package]
name = "osu-rival"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
image = "0.25.6"
ratatui = "0.29.0"
# rosu = "0.6.0"
rosu-v2 = "0.11.0"
sparklines = "0.3.0"
text_io = "0.1.13"
tokio = { version = "1.47.1", features = ["full"] }
viuer = { version = "0.9.2", features = ["print-file"] }
